examples/color.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
  name: appmesh-demo
---
apiVersion: appmesh.k8s.aws/v1alpha1
kind: VirtualService
metadata:
  name: colorteller.appmesh-demo.svc.cluster.local
  namespace: appmesh-demo
spec:
  meshName: color-mesh
  virtualRouter:
    name: color-router-appmesh-demo
  routes:
    - name: color-route-appmesh-demo
      http:
        match:
          prefix: /
        action:
          weightedTargets:
            - virtualNodeName: colorteller-appmesh-demo
              weight: 1
            - virtualNodeName: colorteller-blue-appmesh-demo
              weight: 1
            - virtualNodeName: colorteller-black-appmesh-demo
              weight: 1
---
apiVersion: appmesh.k8s.aws/v1alpha1
kind: VirtualService
metadata:
  name: colorgateway.appmesh-demo.svc.cluster.local
  namespace: appmesh-demo
spec:
  meshName: color-mesh
  virtualRouter:
    name: gateway-router-appmesh-demo
  routes:
    - name: color-route-appmesh-demo
      http:
        match:
          prefix: /color
        action:
          weightedTargets:
            - virtualNodeName: colorgateway-appmesh-demo
              weight: 1
---
apiVersion: v1
kind: Service
metadata:
  name: colorgateway
  namespace: appmesh-demo
  labels:
    app: colorgateway
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: colorgateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorgateway
  namespace: appmesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorgateway
      version: v1
  template:
    metadata:
      labels:
        app: colorgateway
        version: v1
    spec:
      containers:
        - name: colorgateway
          image: "970805265562.dkr.ecr.us-west-2.amazonaws.com/gateway:latest"
          ports:
            - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: colorteller
  namespace: appmesh-demo
  labels:
    app: colorteller
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: colorteller
    version: white
---

# white
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorteller
  namespace: appmesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorteller
      version: white
  template:
    metadata:
      labels:
        app: colorteller
        version: white
    spec:
      containers:
        - name: colorteller
          image: 970805265562.dkr.ecr.us-west-2.amazonaws.com/colorteller:latest
          ports:
            - containerPort: 9080
---
# black
apiVersion: v1
kind: Service
metadata:
  name: colorteller-black
  namespace: appmesh-demo
  labels:
    app: colorteller
    version: black
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: colorteller
    version: black
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorteller-black
  namespace: appmesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorteller
      version: black
  template:
    metadata:
      labels:
        app: colorteller
        version: black
    spec:
      containers:
        - name: colorteller
          image: 970805265562.dkr.ecr.us-west-2.amazonaws.com/colorteller:latest
          ports:
            - containerPort: 9080
---
# blue
apiVersion: v1
kind: Service
metadata:
  name: colorteller-blue
  namespace: appmesh-demo
  labels:
    app: colorteller
    version: blue
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: colorteller
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorteller-blue
  namespace: appmesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorteller
      version: blue
  template:
    metadata:
      labels:
        app: colorteller
        version: blue
    spec:
      containers:
        - name: colorteller
          image: 970805265562.dkr.ecr.us-west-2.amazonaws.com/colorteller:latest
          ports:
            - containerPort: 9080
---
# red
apiVersion: v1
kind: Service
metadata:
  name: colorteller-red
  namespace: appmesh-demo
  labels:
    app: colorteller
    version: red
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: colorteller
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: colorteller-red
  namespace: appmesh-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: colorteller
      version: red
  template:
    metadata:
      labels:
        app: colorteller
        version: red
    spec:
      containers:
        - name: colorteller
          image: 970805265562.dkr.ecr.us-west-2.amazonaws.com/colorteller:latest
          ports:
            - containerPort: 9080
---
